--- a/app/views/admin/cards/index.html.erb
+++ b/app/views/admin/cards/index.html.erb
@@ -1,5 +1,4 @@
-<%= title t('.title') %>
-(Las editadas recientemente se muestran primero)
+<%= title 'Todas las fichas' %>
 
 <div class="actions">
   <%= link_to 'crear nueva ficha', new_admin_card_path %>
