--- a/app/views/admin/tags/index.html.erb
+++ b/app/views/admin/tags/index.html.erb
@@ -1,5 +1,4 @@
-<%= title 'Colores' %>
-<br/><br/>
+<%= title 'Todas las categorías' %>
 
 <div class="actions">
 </div>
@@ -27,10 +26,10 @@
             <td>
               <%= tag.position %>
               <div>
-                <%= link_to image_tag('move_top.png'), admin_tag_position_path(tag) %>
-                <%= link_to image_tag('move_up.png'), admin_tag_position_path(tag) %>
-                <%= link_to image_tag('move_down.png'), admin_tag_position_path(tag) %>
-                <%= link_to image_tag('move_bottom.png'), admin_tag_position_path(tag) %>
+                <%= link_to image_tag('move_top.png'), admin_tag_position_path(tag, move: :top), method: :put %>
+                <%= link_to image_tag('move_up.png'), admin_tag_position_path(tag, move: :up), method: :put %>
+                <%= link_to image_tag('move_down.png'), admin_tag_position_path(tag, move: :down), method: :put %>
+                <%= link_to image_tag('move_bottom.png'), admin_tag_position_path(tag, move: :bottom), method: :put %>
               </div>
             </td>
             <td>
