--- a/app/views/admin/cards/_form.html
+++ b/app/views/admin/cards/_form.html
@@ -71,7 +71,7 @@
           la imágen principal debe tener un máximo de 000px de ancho por 000px de alto</span>
 
             <% if !@card.main_image.nil? %>
-            <%= image_tag @card.main_image.public_filename %>
+            <%= image_tag @card.main_image.filename %>
             <span class="info">Para cambiar esta imágen, sube otra.</span>
             <% end %>
             <br/>
