--- a/app/views/admin/cards/index.html.erb
+++ b/app/views/admin/cards/index.html.erb
@@ -29,8 +29,8 @@
           <%= link_to "/#{card.url}", "/#{card.url}", :class => 'url' %>
         </td>
 
-        <td><%= image_tag card.main_image.public_filename(:thumb) unless card.main_image.nil? %></td>
-        <td><%= image_tag card.main_slide.image.public_filename(:thumb) unless card.main_slide.nil? %>
+        <td><%= image_tag card.main_image.filename.url(:thumb) unless card.main_image.nil? %></td>
+        <td><%= image_tag card.main_slide.image.filename.url(:thumb) unless card.main_slide.nil? %>
           <br/>
           total: <%= card.slides.size %> fotos
         </td>
