--- a/app/views/admin/slides/_slides.html.erb
+++ b/app/views/admin/slides/_slides.html.erb
@@ -18,7 +18,7 @@
       <tr>
         <td>
           <% if slide.image %>
-            <%= link_to image_tag(slide.image.filename.url(:thumb)), slide.image.filename.url  %>
+            <%= link_to image_tag(slide.image.filename.url(:thumb)), [:admin, slide] %>
           <% end %>
         </td>
         <td><%= truncate slide.body %></td>
