--- a/app/views/layouts/grids.html.erb
+++ b/app/views/layouts/grids.html.erb
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="<%= yield :description %>">
+  <meta name="author" content="La panadería s.l.c">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>l a p a n a d e r í a : <%= yield :title %></title>
   <%= stylesheet_link_tag "application" %>
