--- a/app/views/pages/_selected.html.erb
+++ b/app/views/pages/_selected.html.erb
@@ -1,9 +1,9 @@
 <div class="selected"
-     style="background-color: <%= c(selected.card.color.high_value) %>; 
-     color: <%= c(selected.card.color.value) %>;
+     style="background-color: <%= "##{selected.card.color.high_value}" %>;
+     color: <%= "##{selected.card.color.value}" %>;
      width: <%= selected.width %>px;">
   <div class="image">
-    <%= (link_to_if selected.card.visible?, image_tag(selected.image.public_filename), selected.card.path) if selected.image %>
+    <%= (link_to_if selected.card.visible?, image_tag(selected.image.filename.url), selected.card.path) if selected.image %>
   </div>
   <div class="data">
     <div class="date"><%= year_of selected.date %></div>
