--- a/app/views/pages/card.html.erb
+++ b/app/views/pages/card.html.erb
@@ -9,11 +9,6 @@
       border-bottom: 1px solid <%= "##{@card.color.value}" %>;
     }
   </style>
-
-  <script type="text/javascript">
-    var first_image = <%= @card.photos.first.id %>;
-    var last_image = <%= @card.photos.last.id %>;
-  </script>
 <% end -%>
 
 
@@ -70,7 +65,9 @@
 
 
   <!-- slides -->
-  <div id="slides" class="card_element">
+  <div id="slides" class="card_element"
+       data-firstId="<%= @card.photos.first.id %>"
+       data-lastId="<%= @card.photos.last.id %>">
     <% @card.photos.each do |slide| %>
       <div id="slideImage<%= slide.pos %>" class="slide" style="display: none">
         <%= image_tag slide.image.filename.url,
@@ -84,11 +81,11 @@
   </div>
 
   <div id="slide_controls" class="card_element">
-    <%= link_to image_tag('arrowleft1.gif', :alt => 'primera'), '#/imagen=1', {:id => 'slideFirst'},  :class => 'arrow' %>
-    <%= link_to image_tag('arrowleft2.gif', :alt => 'anterior'), '#', {:id => 'slidePrev'}, :class => 'arrow'%>
+    <%= link_to image_tag('/images/ui/arrowleft1.gif', :alt => 'primera'), '#/imagen=1', {:id => 'slideFirst'},  :class => 'arrow' %>
+    <%= link_to image_tag('/images/ui/arrowleft2.gif', :alt => 'anterior'), '#', {:id => 'slidePrev'}, :class => 'arrow'%>
     &nbsp;<span id="number_control"></span> / <span><%= @card.photos.length %></span>&nbsp;
-    <%= link_to image_tag('arrowright1.gif', :alt =>'siguiente'), '#', {:id => 'slideNext'}, :class => 'arrow' %>
-    <%= link_to image_tag('arrowright2.gif', :alt => 'última'), "#/imagen=#{@card.photos.size}", {:id => 'slideLast'}, :class => 'arrow'  %>
+    <%= link_to image_tag('/images/ui/arrowright1.gif', :alt =>'siguiente'), '#', {:id => 'slideNext'}, :class => 'arrow' %>
+    <%= link_to image_tag('/images/ui/arrowright2.gif', :alt => 'última'), "#/imagen=#{@card.photos.size}", {:id => 'slideLast'}, :class => 'arrow'  %>
   </div>
 
 </div>
