--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,7 +7,7 @@
           <%= pinta_card(card) if card.visible? %>
           <%#= pinta_milestones(card) if card.visible? %>
       <% end %>
-      <div id="preview" style="display: none"></div>
+      <div id="preview" style="display: none">&nbsp;</div>
       <div id="loading" style="display: none">
         <div id="spinner"></div>
       </div>
