Minor bug fix. Preparing to move images and files to s3

--- a/app/views/pages/card.html.erb
+++ b/app/views/pages/card.html.erb
@@ -35,7 +35,7 @@
 
 
     <% for prop in @properties %>
-      <div class="prop_name"><%= prop[0] %></div><div class="prop_value"><%= prop[1] %></div>
+      <div class="prop_name"><%= prop[0] %></div><div class="prop_value"><%= textilize prop[1] %></div>
       <div class="prop_separator">&nbsp;</div>
     <% end -%>
 
