--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -17,6 +17,7 @@
   <%= link_to_unless_current t('admin.resources.cards').downcase, admin_cards_path %> |
   <%= link_to_unless_current t('admin.resources.colors').downcase, admin_colors_path %> |
   <%= link_to_unless_current t('admin.resources.tags').downcase, admin_tags_path %> |
+  <%= link_to_unless_current 'ficheros', admin_card_files_path %> |
 </div>
 <div id="page">
   <div id="header" class="banner">
