--- a/app/views/admin/card_files/_files.html.erb
+++ b/app/views/admin/card_files/_files.html.erb
@@ -13,7 +13,7 @@
       <tr>
         <td id="<%= "fileTitle#{file.id}" %>"><%= link_to file.title, edit_admin_card_card_file_path(@card, file) %></td>
         <td>
-          <%= link_to(file.filename, file.public_filename) if file.filename  %>
+          <%= link_to(file.filename, file.stored.url) if file.file? %>
         </td>
         <td class="actions">
           <%= link_to 'Editar', edit_admin_card_card_file_path(@card, file) %>
