--- a/app/views/pages/_actual.erb
+++ b/app/views/pages/_actual.erb
@@ -6,5 +6,5 @@
     <span class="title"><%= link_to_if actual.card.visible?, actual.card.title, actual.card.path, :style => "color: ###{actual.card.color.value};" %></span>
     <div class="body"><%= textilize actual.body %></div>
   </div>
-  <%= (link_to_if actual.card.visible?, image_tag(actual.image.filename.url), actual.card.path) if actual.image %>
+  <%= (link_to_if actual.card.visible?, image_tag(actual.image.stored.url), actual.card.path) if actual.image %>
 </div>
