--- a/app/views/admin/slides/_index.html.erb
+++ b/app/views/admin/slides/_index.html.erb
@@ -17,7 +17,8 @@
     <% slides.each do |slide| %>
       <tr>
         <td>
-          <%= slide.rol %>
+          <%= slide.rol %>/
+          <%= slide.extra %>
           <% if slide.image %>
             <%= link_to image_tag(slide.image.stored.url(:thumb)), [:admin, slide] %>
           <% end %>
