--- a/app/views/admin/card_files/index.html.erb
+++ b/app/views/admin/card_files/index.html.erb
@@ -1,8 +1,8 @@
-<%= title "Ficheros de #{@parent.title}" %>
+<%= title "Ficheros de #{card.title}" %>
 
-<%= render 'card' if @card %>
+<%= render 'card' if card %>
 
-<%= paginate @card_files %>
+<%= paginate card_files %>
 
 <table>
   <thead>
@@ -13,7 +13,7 @@
   </tr>
   </thead>
   <tbody>
-  <% @card_files.each do |card_file| %>
+  <% card_files.each do |card_file| %>
       <tr>
         <td><%= card_file.title %></td>
         <td><%= link_to card_file.card.title, [:admin, card_file.card] %></td>
