--- a/app/views/admin/cards/edit.html.erb
+++ b/app/views/admin/cards/edit.html.erb
@@ -1,7 +1,7 @@
 
 
 
-<%= title "Editar ficha '#{@card.title}'" %>
-<%= render 'card' %>
+<%= title "Editar ficha '#{card.title}'" %>
+<%= render card %>
 <%= render 'form' %>
 
