--- a/app/views/layouts/grids.html.erb
+++ b/app/views/layouts/grids.html.erb
@@ -16,12 +16,12 @@
         <a href="/lapanaderia" id="logo">La Panadería</a>
         <%= render 'layouts/social' %>
         <ul id="tabs">
-          <li id="nav-actual" class="<%= 'selected' if (current_page?(actual_path)|| current_page?(root_path)) %>"><%= link_to 'actual', actual_path %></li>
+          <li id="nav-actual" class="<%= 'selected' if (current_page?(actual_path)|| current_page?(root_path)) %>"><%= link_to 'noticias', actual_path %></li>
           <li id="nav-seleccion" class="<%= 'selected' if current_page?(seleccion_path) %>"><%= link_to 'selección', seleccion_path %></li>
           <li id="nav-indice" class="<%= 'selected' if (current_page?(indice_path)) %>"><%= link_to 'proyectos', indice_path %></li>
           <%= yield :tabs %>
           <li id="nav-panaderia">
-          <%= link_to 'l a p a n a d e r í a', lapanaderia_path %>
+          <%= link_to 'quiénes somos', lapanaderia_path %>
           </li>
         </ul>
         <%= yield %>
