--- a/app/views/admin/card_files/index.html.erb
+++ b/app/views/admin/card_files/index.html.erb
@@ -1,8 +1,8 @@
 <%= title "Ficheros de #{card.title}" %>
 
-<%= render 'card' if card %>
+<%= render card if card %>
 
-<%= paginate card_files %>
+<%# paginate card_files %>
 
 <table>
   <thead>
