--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -15,6 +15,7 @@
 <div id="menu">
   <%= link_to 'Despachodepan', admin_root_path, :class => 'lpn' %> >
   <%= link_to_unless_current t('admin.resources.cards').downcase, admin_cards_path %> |
+  <%= link_to_unless_current 'noticias', admin_posts_path %> | 
   <%= link_to_unless_current t('admin.resources.colors').downcase, admin_colors_path %> |
   <%= link_to_unless_current t('admin.resources.tags').downcase, admin_tags_path %> |
   <%= link_to_unless_current 'ficheros', admin_card_files_path %> |
