--- a/app/views/layouts/cards.html.erb
+++ b/app/views/layouts/cards.html.erb
@@ -19,7 +19,7 @@
         <a href="/lapanaderia" id="logo">La Panadería</a>
         <%= render 'layouts/social' %>
         <ul id="tabs">
-          <li id="nav-actual"><%= link_to 'noticias', actual_path %></li>
+          <li id="nav-actual"><%= link_to 'noticias', posts_path %></li>
           <li id="nav-seleccion"><%= link_to 'selección', seleccion_path %></li>
           <li id="nav-indice"><%= link_to 'proyectos', indice_path %></li>
           <%= yield :tabs %>
