--- a/app/views/layouts/grids.html.erb
+++ b/app/views/layouts/grids.html.erb
@@ -16,7 +16,7 @@
         <a href="/lapanaderia" id="logo">La Panadería</a>
         <%= render 'layouts/social' %>
         <ul id="tabs">
-          <li id="nav-actual" class="<%= 'selected' if (current_page?(actual_path)|| current_page?(root_path)) %>"><%= link_to 'noticias', actual_path %></li>
+          <li id="nav-actual" class="<%= 'selected' if (current_page?(posts_path)|| current_page?(root_path)) %>"><%= link_to 'noticias', posts_path %></li>
           <li id="nav-seleccion" class="<%= 'selected' if current_page?(seleccion_path) %>"><%= link_to 'selección', seleccion_path %></li>
           <li id="nav-indice" class="<%= 'selected' if (current_page?(indice_path)) %>"><%= link_to 'proyectos', indice_path %></li>
           <%= yield :tabs %>
